Includes Bonus 2 challenge

--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
                     Number in Cart: 
                     <span id="number-in-cart">0</span>
                 </h3>
+                <h3>
+                    Total cost in Cart: 
+                    <span id="total-cost-in-cart">0</span>
+                </h3>
                 <form id="cart-form">
                     <input id="cart-amount" type="text" placeholder="Number to add..."/>
                     <input type="submit" value="Add to Cart"></input>
